package com.github.yck.pattern.structural.proxyAB.proxy.dynamic;

public interface ITeacher {
    void teach();
    void sayHello();
}
