@startuml
'https://plantuml.com/class-diagram
note as N
    <b> 动态代理 </b>
    <i> 使用 Java 的 ProxyFactory 类</i>
end note
interface ITeacher{
    teach()
    sayHello()
}
ITeacher <|.. Teacher
class ProxyFactory{
    Object t
    ProxyFactory(Object t)
    Object getProxyInstance()
}

ProxyFactory <.. Client
Teacher <.. Client
@enduml